--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact me</title>
+    <meta name="description" content="My, Fazila Nasib, contact information." />
+    <title>Contact Fazila Nasib</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
