--- a/photo.html
+++ b/photo.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="A hobby of mine, Fazila Nasib." />
     <title>Photo</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h5><a href="/">Back to homepage</a></h5>
-    <img src="/healthyfood.jpeg" alt="" class="img-fluid" />
+    <img
+      src="/healthyfood.jpeg"
+      alt="healthy plate of food"
+      class="img-fluid" />
 
     <h3>To contact me --> <a href="/contact.html">Click here</a></h3>
   </body>
