--- a/photo.html
+++ b/photo.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="A hobby of mine, Fazila Nasib." />
-    <title>Photo</title>
+    <title>Healthy food</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
